Bug 193878 - Files with names containing square brackets are dragged from the playlist to a file manager window incorrectly
Summary: Files with names containing square brackets are dragged from the playlist to ...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: 2.3-GIT
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 196255 203638 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-24 13:39 UTC by Konstantin
Modified: 2009-12-09 11:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Konstantin 2009-05-24 13:39:40 UTC
Version:           2.0.96 (using KDE 4.2.85)
OS:                Linux
Installed from:    SuSE RPMs

When dragging a file containing a square bracket in its name to Dolphin (or Konqueror, or Krusader) the name remains url-encoded. The file manager

Steps to reproduce:
1. Find a folder in the music collection with a name containing brackets or create a new one (e.g. 'Unknown Artist - Unknown Album [2009]') and add some media files to it
2. Add this folder to the playlist
3. Open Dolphin or Konqueror, navigate to some temporary folder
4. Try dragging any of the newly added tracks to the file manager window
It will complain that the file named '/path/to/Unknown Artist - Unknown Album %5B2009%5D/01. Untitled Track.mp3' does not exist.

Expected behavior:
%5B and %5D are expected to be decoded to [ and ].
Comment 1 Alexey Shildyakov 2009-06-25 14:42:41 UTC
related to this: https://bugs.kde.org/show_bug.cgi?id=189527
Comment 2 Myriam Schweingruber 2009-06-25 16:46:02 UTC
Konstantin, 2.0.96 is outdated, you should upgrade to either 2.1 or 2.1.1
Comment 3 Konstantin 2009-07-05 14:44:42 UTC
Amarok 2.1.1 (KDE 4.2.95) - same sympthoms.
Comment 4 Myriam Schweingruber 2009-07-30 18:51:53 UTC
*** Bug 196255 has been marked as a duplicate of this bug. ***
Comment 5 Myriam Schweingruber 2009-07-30 18:52:49 UTC
Can somebody confirm this?
Comment 6 Myriam Schweingruber 2009-08-11 10:41:23 UTC
Confirmed with current 2.2-git
Comment 7 Myriam Schweingruber 2009-08-13 01:18:30 UTC
*** Bug 203638 has been marked as a duplicate of this bug. ***
Comment 8 Ivan Stetsenko 2009-08-13 01:43:43 UTC
Just my five pence - this bug is observed on 2.1.1... Really annoying
Comment 9 Myriam Schweingruber 2009-08-13 10:07:00 UTC
(In reply to comment #8)
> Just my five pence - this bug is observed on 2.1.1... Really annoying

And it is still there in 2.2-GIT

I wonder if it is really a problem of Amarok or if it is a problem with the file manager...
Comment 10 Edward Hades 2009-08-14 10:41:05 UTC
Fixed by commit 3b90916e0ed1eaa00addabd48321f46fb7cdf393
Author: Edward Hades <edward.hades@gmail.com>
Date:   Fri Aug 14 12:23:27 2009 +0400

    Fixed the dolphin drag and drop problem.

    Looks like converting a URL back and forth between QString and QUrl
    enabled an excess layer of urlencoding. Should not break something, but
    may, of course.

    BUG: 193878

 ChangeLog              |    2 ++
 src/AmarokMimeData.cpp |    6 +++---
 2 files changed, 5 insertions(+), 3 deletions(-)