Fixed the dolphin drag and drop problem.

Looks like converting a URL back and forth between QString and QUrl
enabled an excess layer of urlencoding. Should not break something, but
may, of course.

BUG: 193878